--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@payloadcms/db-postgres": "^3.59.1",
     "@payloadcms/next": "^3.59.1",
     "@payloadcms/richtext-lexical": "^3.59.1",
+    "@payloadcms/storage-vercel-blob": "^3.59.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
