--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "^0.4.6",
     "payload": "^3.59.1",
     "react": "19.1.0",
+    "react-calendly": "^4.4.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
